# velocidade_caf

./: README.md
velocidade-caf/: README.md  docker-compose.yml  sw.js
velocidade-caf/backend/: .env  .watchignore  Dockerfile  README.md  alembic.ini  create_test_users_complete.py  fix_athlete_profile.py  pyproject.toml  requirements.txt  run.py
velocidade-caf/backend/alembic/: env.py
velocidade-caf/backend/alembic/versions/: 807155f6e686_initial_migration_with_users_jumps_and_.py
velocidade-caf/backend/app/: __init__.py  config.py  main.py
velocidade-caf/backend/app/api/: __init__.py  deps.py
velocidade-caf/backend/app/api/v1/: __init__.py  athletes.py  coaches.py  deps.py  jumps.py  marks.py  users.py
velocidade-caf/backend/app/core/: __init__.py  config.py  security.py
velocidade-caf/backend/app/crud/: __init__.py  athlete.py  coach.py  jump.py  mark.py  user.py
velocidade-caf/backend/app/db/: session.py
velocidade-caf/backend/app/models/: __init__.py  jump.py  mark.py  mixin.py  user.py
velocidade-caf/backend/app/schemas/: __init__.py  athlete.py  coach.py  jump.py  mark.py  user.py
velocidade-caf/backend/app/services/: auth.py
velocidade-caf/backend/tests/: create_test_users.py
velocidade-caf/frontend/: .eslintrc.cjs  README.md  index.html  package.json  vite.config.ts
velocidade-caf/frontend/public/: manifest.webmanifest
velocidade-caf/frontend/src/: App.tsx  service-worker.ts
velocidade-caf/frontend/static/: manifest.json  pwa-register.js
velocidade-caf/frontend/templates/: athlete-analises.html  coach-analise.html  dash1.html  (+7 more)
(+14 files in other folders)
